--- a/main.html
+++ b/main.html
@@ -161,7 +161,7 @@ Pragmatic and result oriented, highly determined to overcome any challenges in o
 									</header>
 									<p class="wow fadeInRight" data-wow-delay="0.7s">Good management is the art of making problems so interesting and their solutions so constructive that everyone wants to get to work and deal with them.</p>
 									<!-- btn -->
-									<a href="C:\Users\JEN\Desktop\Website\scavvios\Resume.pdf" class="btn btnThemeOutline position-relative btnMinSmall mt-3 mt-lg-5 wow bounceIn" data-hover="Download CV" data-wow-delay="2.3s"><span class="d-block btnText">Download CV</span></a>
+									<a href="Resume.pdf" class="btn btnThemeOutline position-relative btnMinSmall mt-3 mt-lg-5 wow bounceIn" data-hover="Download CV" data-wow-delay="2.3s"><span class="d-block btnText">Download CV</span></a>
 								</div>
 								<div class="col-12 col-md-6 order-md-1">
 									<!-- abFeaturesWrap -->
@@ -410,7 +410,7 @@ Pragmatic and result oriented, highly determined to overcome any challenges in o
 								<div class="col-12 col-md-6">
 									<!-- stImgHolder -->
 									<div class="stImgHolder mx-auto mx-md-0 rounded overflow-hidden mt-md-n4 mb-4 mb-md-0 wow fadeInLeft" data-wow-delay="0.5s">
-										<img src="C:\Users\JEN\Desktop\Website\scavvios\images\123.jpg"class="rounded img-fluid" alt="image description">
+										<img src="images\123.jpg"class="rounded img-fluid" alt="image description">
 									</div>
 								</div>
 								<div class="col-12 col-md-6">
